--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -361,7 +361,9 @@ h1, h2, h3, h4, h5, h6, p {
         z-index:9999;
     }   
 }
-
+.page-buttons {
+    display: inline-block !important;
+}
 /*--------------------------------------------------------------
     Interacción de tablas del panel de doncente
 --------------------------------------------------------------*/
