chequeo en backend de permisos + chequeo de formularios

--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -304,7 +304,7 @@
                     {% if lastpage == 1 %}
                     <a class="btn btn-primary mr-3 disabled" href="/">Siguiente</a>
                     {% else %}
-                    <a class="btn btn-primary mr-3" href="/panel_estudiantes/{{page + 1}}">Anterior</a>
+                    <a class="btn btn-primary mr-3" href="/panel_estudiantes/{{page + 1}}">Siguiente</a>
                     {% endif %}
                 </div>
             </nav>
