--- a/flaskps/templates/auth/panel_components/administracion_sitio.html
+++ b/flaskps/templates/auth/panel_components/administracion_sitio.html
@@ -13,7 +13,7 @@
                     <form action="{{ url_for('change_site_status') }}" method="POST">
                         <div class="row">
                             <div class="col-md-12 mb-3">
-                                <select name="estado_sitio" class="browser-default custom-select">
+                                <select name="estado_sitio" class="browser-default custom-select" required>
                                     {% if infositio.activo == 1 %}
                                     <option value="0">Inactivo</option>
                                     <option value="1" selected>Activo</option>
@@ -40,7 +40,7 @@
                     <form action="{{ url_for('change_site_pagination') }}" method="POST">
                         <div class="row">
                             <div class="col-md-12 mb-3">
-                                <input type="number" min="0" name="paginacion" class="form-control" value="{{ infositio.paginacion }}">
+                                <input type="number" min="0" max="20" name="paginacion" class="form-control" value="{{ infositio.paginacion }}" required>
                             </div>
                             <div class="col-md-12 text-right">
                                 <button type="submit" class="btn btn-primary">Guardar</button>                                             
@@ -61,13 +61,13 @@
                         <div class="row">
                             <div class="col-md-12 mb-3">
                                 <label>Titulo</label>
-                                <input type="text" class="form-control mb-2" name="titulo" value="{{infositio.titulo}}">
+                                <input type="text" class="form-control mb-2" name="titulo" value="{{infositio.titulo}}" required>
                                 <div class="form-group mb-2">
                                     <label for="exampleFormControlTextarea1">Descripción</label>
-                                    <textarea class="form-control rounded-0" name="descripcion" id="descripcion" rows="8">{{infositio.descripcion}}</textarea>
+                                    <textarea class="form-control rounded-0" name="descripcion" id="descripcion" rows="8" required>{{infositio.descripcion}}</textarea>
                                 </div>
                                 <label>Email de contacto</label>
-                                <input type="text" class="form-control mb-2" name="email" value="{{infositio.email}}">
+                                <input type="text" class="form-control mb-2" name="email" value="{{infositio.email}}" required>
                             </div>
                             <div class="col-md-12 text-right">
                                 <button type="submit" class="btn btn-primary">Guardar</button>                                             
