--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -287,6 +287,7 @@ h1, h2, h3, h4, h5, h6, p {
     z-index: 10;
     border-radius: 0 !important;
     box-shadow: 0 .07em .18em 0 rgba(0,0,0,.22) !important;
+    background: #6893d9;
 }
 .navbar-static-top {
     margin-bottom: 0px;
