--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -98,7 +98,6 @@ h1, h2, h3, h4, h5, h6, p {
 .card {
     border-radius: 3px;
     border: 0 none !important;
-    box-shadow: 0 .1em .24em 0 rgba(0,0,0,.22) !important;
 }
 .card-header {
     background: #fbfbfb !important;
@@ -271,10 +270,10 @@ h1, h2, h3, h4, h5, h6, p {
     }
 }
 .panel {
-    background: #fcfcfc;
+    background: #fff;
 }
-.nav-link-panel, .nav-link-nombre {
-    color: #777;
+.nav-link-panel , .nav-link-nombre {
+    color: #353535 !important;
     font-weight: 500;
 }
 .nav-link-panel {
@@ -287,7 +286,7 @@ h1, h2, h3, h4, h5, h6, p {
     z-index: 10;
     border-radius: 0 !important;
     box-shadow: 0 .07em .18em 0 rgba(0,0,0,.22) !important;
-    background: #6893d9;
+    background: #f3f3f3;
 }
 .navbar-static-top {
     margin-bottom: 0px;
@@ -312,16 +311,17 @@ h1, h2, h3, h4, h5, h6, p {
     border: 0 none !important;
     width: 100% !important;
     padding: .9em 2.3em !important;
+    background: none !important;
 }
-.menuItem a {
-    color: #444 !important;
-    font-size: 1.04em;
+.menuItem a, .menuItem a i{
+    color: #494949 !important;
+    font-size: 1.1em;
 }
 .menuItem a:hover {
-    color: #2c7695 !important;
+    color: #0971d9 !important;
 }
 .menuItem a:hover i {
-    color: #2c7695 !important;
+    color: #0971d9 !important;
 }
 .subItem {
 	display: none;
@@ -337,9 +337,6 @@ h1, h2, h3, h4, h5, h6, p {
 .navbar-brand {
     color: #444 !important;
     cursor: default !important;
-}
-.panel-nav {
-    background: #fdfdfd;
 }
 .btn-note-detail {
     background: #7ed4c9;
