--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -21,6 +21,10 @@
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
                             </ul>
+                            <hr>
+                            <ul class="list-group list-group-flush mt-auto">
+                                <li class="list-group-item menuItem" role="button"><a href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i><b>Salir</b></a>
+                            </ul>
                         </div>
                         
                     </aside>
@@ -28,22 +32,14 @@
                     <!-- Columna full width -->
                     <div class="col p-0">
                         <!-- Navegación -->
-                        <nav class="navbar navbar-expand-lg navbar-light navbar-static-top shadow-sm bg-white uns px-5">
+                        <nav class="navbar panel-navbar navbar-expand-lg navbar-light navbar-static-top shadow-sm bg-white uns px-5">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-link nav-link-panel">
                                     Panel de administración
                                 </li>
                             </ul>
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item dropdown">
-                                    <i class="nav-link nav-link-nombre dropdown-toggle black4 cursor-p" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-user black4 mr-2"></i><span class="black4">{{nombre}} {{apellido}}</span>
-                                    </i>
-                                    <div class="dropdown-menu dropdown-menu-right dropdown-default py-2" aria-labelledby="navbarDropdownMenuLink-333">
-                                        <a class="dropdown-item" href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i><b>Salir</b></a>
-                                    </div>
-                                </li>
+                                {{nombre}} {{apellido}}
                             </ul>
                         </nav>
                         <!-- /Navegación -->
