paginas de error 404 y 401 + busqueda de alumnos completo

--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -23,7 +23,7 @@
                             </ul>
                             <hr>
                             <ul class="list-group list-group-flush mt-auto">
-                                <li class="list-group-item menuItem" role="button"><a href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i><b>Salir</b></a>
+                                <li class="list-group-item menuItem" role="button"><a href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i>Salir</a>
                             </ul>
                         </div>
                         
