--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -129,7 +129,7 @@
                             {% for p in permisos %}
                             {% if p.nombre == 'estudiante_destroy' %}
                             <!-- Eliminar estudiante -->
-                            <a href="/delete_student/{{row.id}}" class="btn btn-danger btn-sm mb-3" onclick="return confirm('Are You Sure For Delete?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
+                            <a href="/delete_student/{{row.id}}" class="btn btn-danger btn-sm mb-3" onclick="return confirm('Estas seguro que deseas eliminar el estudiante?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
                             {% endif %}
                             {% endfor %}
                         </td>
@@ -254,7 +254,7 @@
                                             </div>
                                             <div class="col-6">
                                                 <label>Domicilio</label>
-                                                <input type="text" min="0" class="form-control" value="{{row.numero}}" name="domicilio" required="1">
+                                                <input type="text" min="0" class="form-control" value="{{row.domicilio}}" name="domicilio" required="1">
                                             </div>
                                         </div>                                
                                         <!-- Direccion -->
