--- a/flaskps/templates/home/site_down.html
+++ b/flaskps/templates/home/site_down.html
@@ -6,8 +6,8 @@
     
     {% block content %}
         {% include 'home/login_navbar.html' %}
-        <div class="container-fluid">
-            <div class="row justify-content-center py-3">
+        <div class="container-fluid pt-5">
+            <div class="row justify-content-center pt-5">
                 <div class="col-md-8 py-5">
                     <img src="{{ url_for('static', filename='img/error_wallpaper.png') }}" class="w-100 card" alt="el sitio se encuentra en mantenimiento">
                 </div>
