restriccion de paginacion de alumnos

--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -22,8 +22,9 @@
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
                             </ul>
                             <hr>
-                            <ul class="list-group list-group-flush mt-auto">
-                                <li class="list-group-item menuItem" role="button"><a href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i>Salir</a>
+                            <span class="h5 ml-4">{{nombre}} {{apellido}}</span>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item menuItem mt-auto" role="button"><a href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i>Salir</a>
                             </ul>
                         </div>
                         
@@ -37,9 +38,6 @@
                                 <li class="nav-link nav-link-panel">
                                     Panel de administración
                                 </li>
-                            </ul>
-                            <ul class="navbar-nav ml-auto">
-                                {{nombre}} {{apellido}}
                             </ul>
                         </nav>
                         <!-- /Navegación -->
