--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="h5">Búsqueda</h1>
+                            <h1 class="h5"><i class="fas fa-search mr-2"></i>Búsqueda</h1>
                             <hr>
                         </div>
                     </div>
@@ -90,9 +90,9 @@
                         <i class="fas fa-user-plus mr-2"></i> Nuevo Estudiante
                     </button>
                 </div>
+                <hr class="mx-3">
                 {% endif %}
             {% endfor %}
-            <hr class="mx-3">
         </div>
     </div>
     <div class="row">
