usuario panel + frontend + paginacion + falta acomodar registro

--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -16,7 +16,7 @@
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_estudiantes"><i class="fas fa-user-graduate black3 mr-2"></i>Estudiantes</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_empleados"><i class="fas fa-user-friends black3 mr-2"></i>Empleados</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_docentes"><i class="fas fa-user-friends black3 mr-2"></i>Docentes</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users black3 mr-2"></i>Usuarios</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
@@ -62,6 +62,24 @@
                             {% block contentitem %}
                             {% endblock %}
                             <!-- /.Block Contenido -->
+                            <script>
+                                var today = new Date();
+                                var dd = today.getDate();
+                                var mm = today.getMonth()+1; //January is 0!
+                                var yyyy = today.getFullYear();
+                                if(dd<10){
+                                    dd='0'+dd
+                                } 
+                                if(mm<10){
+                                    mm='0'+mm
+                                } 
+
+                                today = yyyy+'-'+mm+'-'+dd;
+                                fechas = document.getElementsByClassName("datefield"); 
+                                for (index = 0; index < fechas.length; index++) {
+                                    fechas[index].setAttribute("max", today);
+                                }
+                            </script>
 
                         </div>
                         <!-- /.Container Fluid -->
