--- a/flaskps/templates/auth/panel_components/usuarios.html
+++ b/flaskps/templates/auth/panel_components/usuarios.html
@@ -3,12 +3,81 @@
 <i class="fas fa-users black3 mr-2"></i>Usuarios
 {% endblock %}
 {% block contentitem %}
-        <div class="row">
-            <div class="col-12 mb-3">
-                <button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#usuarioCreate">
-                    <i class="fas fa-user-plus mr-2"></i> Nuevo Usuario
-                </button>
+    <div class="row mb-4">
+        <div class="col-12 col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="h5"><i class="fas fa-search mr-2"></i>Búsqueda</h1>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                                    aria-selected="true">Nombre de usuario</a>
+                                </li>
+                                <!--li class="nav-item">
+                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                                    aria-selected="false">Actvio/Bloqueado</a>
+                                </li-->
+                            </ul>
+                            <div class="tab-content" id="myTabContent">
+                                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                    <form action="{{ url_for('panel_usuarios') }}" method="GET" class="py-4">
+                                        <div class="row">
+                                            <!-- Nombre  -->
+                                            <div class="col-12 col-md-8 my-1">
+                                                <input type="text" placeholder="Nombre de usuario" name="solo_nombre" class="form-control" required>
+                                            </div>
+                                            <!-- Search  -->
+                                            <div class="col-12 col-md-4 my-1">
+                                                <button type="submit" class="btn btn-primary btn-block">Buscar<i class="fas fa-arrow-right ml-3"></i></button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                <!--div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                    <form action="{{ url_for('panel_usuarios') }}" method="GET" class="py-4">
+                                        <div class="row">
+                                             Apellido  
+                                            <div class="col-12 col-md-8 my-1">
+                                                <select name="active" class="browser-default custom-select" required>
+                                                    <option selected disabled>Seleccionar</option>
+                                                    <option value="1">Activo</option>
+                                                    <option value="0">Bloqueado</option>
+                                                </select>
+                                            </div>
+                                             Search  
+                                            <div class="col-12 col-md-4 my-1">
+                                                <button type="submit" class="btn btn-primary btn-block">Buscar<i class="fas fa-arrow-right ml-3"></i></button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div-->
+                            </div>
+                        </div>
+                    </div>  
+                </div>  
             </div>
+        </div>
+        <div class="col-12 col-md-4">
+            {% for p in permisos %}
+                {% if p.nombre == 'usuario_new' %}
+                <div class="col-12 col-md-8 mb-3">
+                    <button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#usuarioCreate">
+                        <i class="fas fa-user-plus mr-2"></i> Nuevo Usuario
+                    </button>
+                </div>
+                <hr class="mx-3">
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+        <div class="row">
             <div class="col-12">
                 <div class="table-responsive">
                     <table class="table table-striped">
@@ -18,8 +87,15 @@
                             <th>Nombre</th>
                             <th>Nombre de Usuario</th>
                             <th>Email</th>
+                            {% for p in permisos %}
+                            {% if p.nombre == 'usuario_update' %}
+                            <th>Modificar</th>
                             <th>Activo/Inactivo</th>
-                            <th class="text-center">Acciones</th>
+                            {% endif %}
+                            {% if p.nombre == 'usuario_destroy' %}
+                            <th>Eliminar</th>
+                            {% endif %}
+                            {% endfor %}
                         </tr>
                         <!-- Row Estudiantes -->
                         {% for row in usuarios %}
@@ -28,9 +104,11 @@
                             <td>{{row.first_name}}</td>
                             <td>{{row.username}}</td>
                             <td>{{row.email}}</td>
+                            {% for p in permisos %}
+                            {% if p.nombre == 'usuario_update' %}
                             <td>
                                 <form action="{{ url_for('update_user_status') }}" method="POST">        
-                                    <input type="hidden"  name="id" value="{{row.id}}">                          
+                                    <input type="hidden"  name="user_id" value="{{row.id}}">                          
                                     {% if row.activo == 1 %}
                                     <span class="mr-2">Activo</span>
                                     <input type="hidden"  name="activo" value="0">
@@ -42,16 +120,16 @@
                                     {% endif %}
                                 </form>
                             </td>
-                            <td class="text-center">
-                                <!-- Eliminar usuario -->
-                                {% for p in permisos %}
-                                    {% if p.nombre == 'usuario_update' %}
-                                    <a href="/user_update/{{row.id}}" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#userEdit{{row.id}}"><i class="fas fa-edit mr-2"></i>Editar</a>
-                                    {% endif %}
-                                    {% if p.nombre == 'usuario_destroy' %}
-                                    <a href="/user_delete/{{row.id}}" class="btn btn-danger btn-sm" onclick="return confirm('Are You Sure For Delete?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
-                                    {% endif %}
-                                {% endfor %}
+                            <td>    
+                                <a href="/user_update/{{row.id}}" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#userEdit{{row.id}}"><i class="fas fa-edit mr-2"></i>Editar</a>
+                            </td>
+                            {% endif %}
+                            {% if p.nombre == 'usuario_destroy' %}
+                            <td>
+                                <a href="/user_delete/{{row.id}}" class="btn btn-danger btn-sm" onclick="return confirm('Are You Sure For Delete?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
+                            </td>
+                            {% endif %}
+                            {% endfor %}
                             </td>
                         </tr>
                         {% endfor %}
@@ -59,27 +137,43 @@
                     </table>
                 </div>
             </div>
+
+            <div class="col-12 my-4">
+                <nav class="row">
+                    <div class="col-12">
+                        {% if page == 1 %}
+                        <a class="btn btn-primary mr-3 disabled" href="/">Anterior</a>
+                        {% else %}
+                        <a class="btn btn-primary mr-3" href="/panel_usuarios/{{page - 1}}">Anterior</a>
+                        {% endif %}
+                        {% if lastpage == 1 %}
+                        <a class="btn btn-primary mr-3 disabled" href="/">Siguiente</a>
+                        {% else %}
+                        <a class="btn btn-primary mr-3" href="/panel_usuarios/{{page + 1}}">Siguiente</a>
+                        {% endif %}
+                    </div>
+                </nav>
+            </div>
             
             <!-- Modal -->
             <div id="usuarioCreate" class="modal fade" role="dialog">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Ingresar datos</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        </div>
-                        <div class="modal-body px-4">
-                            <form action="{{ url_for('user_new') }}" method="POST">
-
+                        <form action="{{ url_for('user_new') }}" method="POST">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Ingresar datos</h4>
+                                <button type="button" class="close" onclick="this.form.reset();" data-dismiss="modal">&times;</button>
+                            </div>
+                            <div class="modal-body px-4">
                                 <!-- Nombre y apellido -->
                                 <div class="form-group row">
                                     <div class="col-12 mb-3">
                                         <label>Apellido</label>
-                                        <input type="text" class="form-control" placeholder="Ingrese apellido" name="first_name" required>
+                                        <input type="text" class="solo-letras form-control" placeholder="Ingrese apellido" name="first_name" required>
                                     </div>
                                     <div class="col-12 mb-3">
                                         <label>Nombre</label>
-                                        <input type="text" class="form-control" placeholder="Ingrese nombre" name="last_name" required>
+                                        <input type="text" class="solo-letras form-control" placeholder="Ingrese nombre" name="last_name" required>
                                     </div>
                                     <div class="col-12 mb-3">
                                         <label>Nombre de usuario</label>
@@ -99,18 +193,19 @@
                                     </div>
                                     <div class="col-12 mb-3">
                                         <label>Rol</label>
-                                        <select name="rol" class="browser-default custom-select" required>
-                                            <option selected disabled>Seleccionar</option>
-                                            {% for rol in roles_lista %}
-                                            <option value="{{rol.id}}">{{rol.nombre}}</option>
-                                            {% endfor %}
-                                        </select>
+                                        {% for rol in roles_lista %}
+                                        <!-- Default checked -->
+                                        <div class="custom-control custom-checkbox">
+                                            <input name="rol{{ rol.id }}" type="checkbox" class="custom-control-input" id="{{ rol.nombre }}">
+                                            <label class="custom-control-label" for="{{ rol.nombre }}">{{ rol.nombre }}</label>
+                                        </div>
+                                        {% endfor %}
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="form-group row">
                                     <div class="col-6 text-left">
-                                        <button type="button" class="btn btn-light black2" data-dismiss="modal">Cancelar</button>
+                                        <button class="btn btn-light black2" onclick="this.form.reset();" data-dismiss="modal">Cancelar</button>
                                     </div>
                                     <div class="col-6 text-right">
                                         <button class="btn btn-primary" type="submit">Crear usuario</button>
@@ -123,6 +218,15 @@
             </div>
             
         </div>
-        <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='js/jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{url_for('static', filename = 'js/bootstrap.min.js')}}"></script>
+        <script>
+                function testInput(event) {
+                    var value = String.fromCharCode(event.which);
+                    var pattern = new RegExp(/[a-zåäö ]/i);
+                    return pattern.test(value);
+                    }
+    
+                    $('.solo-letras').bind('keypress', testInput);
+            </script>
 {% endblock %}
