panel instrumentos + validacion de paginacion

--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -17,6 +17,7 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_estudiantes"><i class="fas fa-user-graduate black3 mr-2"></i>Estudiantes</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_docentes"><i class="fas fa-user-friends black3 mr-2"></i>Docentes</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_instrumentos"><i class="fas fa-guitar black3 mr-2"></i>Instrumentos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users black3 mr-2"></i>Usuarios</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
